--- a/AppLogic/AppLogicText.cs.resx
+++ b/AppLogic/AppLogicText.cs.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AwayEditorDurationFormat" xml:space="preserve">
+    <value>Co byste chtěli udělat s {0}, kde jste byli pryč?</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
+    <value>Odešli jste v {0:T} dne {0:D} a vrátili jste se v {1:T} dne {1:D}.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="AwayEditorWasTimingFormat" xml:space="preserve">
+    <value>Když jste odcházeli, načasovali jste {0}.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
     <value>Vytváření sloupce</value>
     <comment>from GoogleTranslator2</comment>
