--- a/AppLogic/AppLogicText.de.resx
+++ b/AppLogic/AppLogicText.de.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AwayEditorDurationFormat" xml:space="preserve">
+    <value>Was möchten Sie mit dem {0} machen, in dem Sie weg waren?</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
+    <value>Sie sind um {0:T} am {0:D} losgefahren und um {1:T} am {1:D} zurückgekehrt.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="AwayEditorWasTimingFormat" xml:space="preserve">
+    <value>Du hast {0} getimt, als du gegangen bist.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
     <value>Spalte erstellen</value>
     <comment>from GoogleTranslator2</comment>
