--- a/AppLogic/AppLogicText.fr.resx
+++ b/AppLogic/AppLogicText.fr.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AwayEditorDurationFormat" xml:space="preserve">
+    <value>Qu'aimeriez-vous faire du {0} pendant lequel vous étiez absent ?</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
+    <value>Vous êtes parti à {0:T} le {0:D} et êtes revenu à {1:T} le {1:D}.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="AwayEditorWasTimingFormat" xml:space="preserve">
+    <value>Vous chronométriez {0} lorsque vous êtes parti.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
     <value>Créer une colonne</value>
     <comment>from GoogleTranslator2</comment>
