--- a/AppLogic/AppLogicText.no.resx
+++ b/AppLogic/AppLogicText.no.resx
@@ -121,12 +121,12 @@
     <value>Hva vil du gjøre med {0} du var borte?</value>
     <comment>from GoogleTranslator</comment>
   </data>
-  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
-    <value>Du dro kl. {0:T} {0:D} og kom tilbake kl. {1:T} {1:D}.</value>
+  <data name="AwayEditorWasNotTimingFormat" xml:space="preserve">
+    <value>Du dro kl. {0:T} {0:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayEditorWasTimingFormat" xml:space="preserve">
-    <value>Du målte {0} da du dro.</value>
+    <value>Du målte {0} da du dro kl. {1:T} på {1:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
