--- a/AppLogic/AppLogicText.fi.resx
+++ b/AppLogic/AppLogicText.fi.resx
@@ -121,12 +121,12 @@
     <value>Mitä haluaisit tehdä tuotteelle {0}, jonka olit poissa?</value>
     <comment>from GoogleTranslator</comment>
   </data>
-  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
-    <value>Lähdit klo {0:T} {0:D} ja palasit klo {1:T} {1:D}.</value>
+  <data name="AwayEditorWasNotTimingFormat" xml:space="preserve">
+    <value>Lähdit klo {0:T} {0:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayEditorWasTimingFormat" xml:space="preserve">
-    <value>Lähtiessäsi ajoitit {0}.</value>
+    <value>Olit ajoitusaikana {0}, kun lähdit klo {1:T} klo {1:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
