--- a/AppLogic/AppLogicText.it.resx
+++ b/AppLogic/AppLogicText.it.resx
@@ -121,12 +121,12 @@
     <value>Cosa vorresti fare con il {0} che eri via?</value>
     <comment>from GoogleTranslator</comment>
   </data>
-  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
-    <value>Sei partito alle {0:T} il {0:D} e sei tornato alle {1:T} il {1:D}.</value>
+  <data name="AwayEditorWasNotTimingFormat" xml:space="preserve">
+    <value>Sei partito alle {0:T} su {0:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayEditorWasTimingFormat" xml:space="preserve">
-    <value>Stavi cronometrando {0} quando te ne sei andato.</value>
+    <value>Stavi cronometrando {0} quando sei partito alle {1:T} il {1:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
