--- a/AppLogic/AppLogicText.pl.resx
+++ b/AppLogic/AppLogicText.pl.resx
@@ -121,12 +121,12 @@
     <value>Co chciałbyś zrobić z {0}, którego nie było?</value>
     <comment>from GoogleTranslator</comment>
   </data>
-  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
-    <value>Wyszedłeś o {0:T} {0:D} i wróciłeś o {1:T} {1:D}.</value>
+  <data name="AwayEditorWasNotTimingFormat" xml:space="preserve">
+    <value>Wyszedłeś o {0:T} {0:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayEditorWasTimingFormat" xml:space="preserve">
-    <value>Kiedy wychodziłeś, mierzyłeś czas {0}.</value>
+    <value>Miałeś czas {0}, kiedy wyszedłeś o {1:T} w {1:D}.</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
