--- a/AppLogic/AppLogicText.zh-CN.resx
+++ b/AppLogic/AppLogicText.zh-CN.resx
@@ -121,12 +121,12 @@
     <value>你想用你离开的{0}做什么？</value>
     <comment>from GoogleTranslator</comment>
   </data>
-  <data name="AwayEditorLeftAndReturnedFormat" xml:space="preserve">
-    <value>您于 {0:D} 于 {0:T} 出发，于 {1:D} 于 {1:T} 返回。</value>
+  <data name="AwayEditorWasNotTimingFormat" xml:space="preserve">
+    <value>您于 {0:D} 于 {0:T} 离开。</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="AwayEditorWasTimingFormat" xml:space="preserve">
-    <value>您离开时正在计时 {0}。</value>
+    <value>您在 {1:D} 在 {1:T} 离开时正在计时 {0}。</value>
     <comment>from GoogleTranslator</comment>
   </data>
   <data name="BusyStatusColumnEditorCreatingColumn" xml:space="preserve">
